--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -3927,6 +3927,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin: 7.5px -15px;
 }
 .navbar-nav > li > a {
+  font-family:  'Ruda', sans-serif;
   padding-top: 10px;
   padding-bottom: 10px;
   line-height: 20px;
